酒店定时器

--- a/hotel/src/main/webapp/hotel_user/index.html
+++ b/hotel/src/main/webapp/hotel_user/index.html
@@ -74,7 +74,7 @@
 	              <li>免费WiFi 高清智能电视</li>
 	            </ul>
 	            <h1 class="card-title pricing-card-title">70元 <small class="text-muted">/ 晚</small></h1>
-	            <button type="button" class="btn btn-lg btn-block btn-outline-primary" onclick="location.href='/hotel/hotel_user/order.html'">预&nbsp;定</button>
+	            <button type="button" class="btn btn-lg btn-block btn-outline-primary" onclick="location.href='/hotel/hotel_user/order.html?num=1'">预&nbsp;定</button>
 	          </div>
 	        </div>
 	        <div class="card mb-4 box-shadow">
@@ -90,7 +90,7 @@
 	              <li>免费WiFi 高清智能电视 电脑</li>
 	            </ul>
 	            <h1 class="card-title pricing-card-title">150元 <small class="text-muted">/ 晚</small></h1>
-	            <button type="button" class="btn btn-lg btn-block btn-outline-primary" onclick="location.href='/hotel/hotel_user/order.html'">预&nbsp;定</button>
+	            <button type="button" class="btn btn-lg btn-block btn-outline-primary" onclick="location.href='/hotel/hotel_user/order.html?num=2'">预&nbsp;定</button>
 	          </div>
 	        </div>
 	        <div class="card mb-4 box-shadow">
@@ -106,7 +106,7 @@
 	              <li>免费WiFi 高清智能电视 电脑</li>
 	            </ul>
 	            <h1 class="card-title pricing-card-title">200元 <small class="text-muted">/ 晚</small></h1>
-	            <button type="button" class="btn btn-lg btn-block btn-outline-primary" onclick="location.href='/hotel/hotel_user/order.html'">预&nbsp;定</button>
+	            <button type="button" class="btn btn-lg btn-block btn-outline-primary" onclick="location.href='/hotel/hotel_user/order.html?num=3'">预&nbsp;定</button>
 	          </div>
 	        </div>
 	      </div>
@@ -119,6 +119,6 @@
   	<link href="/hotel/css/carousel.css" rel="stylesheet" />
   	<script src="/hotel/js/jquery-3.2.1.slim.min.js"></script>
   	<script src="/hotel/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="/hotel/js/hotel_user/page-common.js"></script>
+	<script type="text/javascript" src="/hotel/js/hotel_user/page-common.js"></script>
   </body>
 </html>
