--- a/hotel/src/main/webapp/hotel_user/order.html
+++ b/hotel/src/main/webapp/hotel_user/order.html
@@ -22,8 +22,8 @@
 	         <div class="card-deck mb-3 text-center">
 		        <div class="card mb-4 box-shadow">
 		          <div class="card-body">
-		          	<img class="second-slide" src="../img/house1.jpg" alt="单人间">
-		            <ul class="list-unstyled mt-3 mb-4">
+		          	<img class="second-slide" src="../img/house1.jpg" alt="单人间" id="house">
+		            <ul class="list-unstyled mt-3 mb-4" id="message">
 		              <li>面积15-20㎡ 位于 2 层</li>
 		              <li>单床（不可以加床）</li>
 		              <li>独立卫浴 有窗</li>
@@ -45,7 +45,7 @@
 			      		<tbody>
 			      			<tr>
 			      				<td>房型信息：</td>
-			      				<td>实惠单人房&nbsp;&nbsp; 出差力荐</td>
+			      				<td id="describe">实惠单人房&nbsp;&nbsp; 出差力荐</td>
 			      			</tr>
 			      			<tr>
 			      				<td>居住时间：</td>
@@ -122,9 +122,8 @@
   	
   	<script type="application/javascript"src="../js/hotel_user/page-common.js"></script>
   	<script type="application/javascript" src="../js/jquery-3.2.1.slim.min.js"></script>
-  	<script type="application/javascript" src="../js/hotel_user/order.js"></script>
-  	
   	<script type="text/javascript" src="../js/jquery-1.10.2.js"></script>
-  	<script src="../js/date.js"></script>	
+  	<script src="../js/date.js"></script>
+  	<script type="application/javascript" src="../js/hotel_user/order.js"></script>
   </body>
 </html>
