--- a/hotel/src/main/webapp/hotel_user/signin.html
+++ b/hotel/src/main/webapp/hotel_user/signin.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="text-center">
-    <form class="form-signin">
+    <form class="form-signin" method="post" action="#" onsubmit="return false">
       <img class="mb-4" src="../img/hotel.png" alt="" width="144" height="144">
       <h1 class="h3 mb-3 font-weight-normal">欢迎登录</h1>
       <label for="inputEmail" class="sr-only">电子邮件</label>
@@ -31,5 +31,8 @@
     
     <link href="../css/bootstrap.min.css" rel="stylesheet">
   	<link href="../css/signin.css" rel="stylesheet">
+  	
+  	<script type="text/javascript" src="/hotel/js/jquery-1.10.2.js"></script>
+  	<script type="text/javascript" src="/hotel/js/hotel_user/signin.js"></script>
   </body>
 </html>
